// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Richtext Component should render HTML parsed to React Components 1`] = `
<Wrapper
  theme={
    Object {
      "typography": Object {
        "body1": Object {
          "color": "#000",
          "fontFamily": "Helvetica, Arial, sans-serif",
          "fontSize": "1rem",
          "fontWeight": 400,
          "lineHeight": "1.31em",
        },
      },
    }
  }
>
  <Title1
    key="0"
    theme={
      Object {
        "typography": Object {
          "title1": Object {
            "color": "#000",
            "fontFamily": "Helvetica, Arial, sans-serif",
            "fontSize": "6rem",
            "fontWeight": 300,
            "lineHeight": "1.6em",
            "textTransform": "uppercase",
          },
        },
      }
    }
  >
    Heading 1
  </Title1>
  <Title2
    key="1"
    theme={
      Object {
        "typography": Object {
          "title2": Object {
            "color": "#000",
            "fontFamily": "Helvetica, Arial, sans-serif",
            "fontSize": "5rem",
            "fontWeight": 300,
            "lineHeight": "1.5em",
            "textTransform": "uppercase",
          },
        },
      }
    }
  >
    Heading 2
  </Title2>
  <Title3
    key="2"
    theme={
      Object {
        "typography": Object {
          "title3": Object {
            "color": "#000",
            "fontFamily": "Helvetica, Arial, sans-serif",
            "fontSize": "4rem",
            "fontWeight": 300,
            "lineHeight": "1.4em",
            "textTransform": "uppercase",
          },
        },
      }
    }
  >
    Heading 3
  </Title3>
  <Title4
    key="3"
    theme={
      Object {
        "typography": Object {
          "title4": Object {
            "color": "#000",
            "fontFamily": "Helvetica, Arial, sans-serif",
            "fontSize": "3rem",
            "fontWeight": 300,
            "lineHeight": "1.3em",
            "textTransform": "uppercase",
          },
        },
      }
    }
  >
    Heading 4
  </Title4>
  <Title5
    key="4"
    theme={
      Object {
        "typography": Object {
          "title5": Object {
            "color": "#000",
            "fontFamily": "Helvetica, Arial, sans-serif",
            "fontSize": "2rem",
            "fontWeight": 300,
            "lineHeight": "1.2em",
            "textTransform": "uppercase",
          },
        },
      }
    }
  >
    Heading 5
  </Title5>
  <Title6
    key="5"
    theme={
      Object {
        "typography": Object {
          "title6": Object {
            "color": "#000",
            "fontFamily": "Helvetica, Arial, sans-serif",
            "fontSize": "1rem",
            "fontWeight": 300,
            "lineHeight": "1.1em",
            "textTransform": "uppercase",
          },
        },
      }
    }
  >
    Heading 6
  </Title6>
  <P
    key="6"
    theme={
      Object {
        "typography": Object {
          "body1": Object {
            "color": "#000",
            "fontFamily": "Helvetica, Arial, sans-serif",
            "fontSize": "1rem",
            "fontWeight": 400,
            "lineHeight": "1.31em",
          },
        },
      }
    }
  >
    Paragraph
  </P>
  <PictureWrapper
    key="7"
    theme={
      Object {
        "breakpoints": Object {
          "min": [Function],
        },
      }
    }
  >
    <PictureBrick
      alt="Scrum"
      link="coremedia:///image/2662/data"
      ratio="landscape_ratio16x9"
      stretch={true}
    />
  </PictureWrapper>
  <a
    cms-href="coremedia:///page/home~2450"
    href="#none"
    key="8"
  >
    CoreMedia Labs
  </a>
  <ul
    key="9"
  >
    <li
      key="0"
    >
      <a
        href="https://labs.coremedia.com/"
        key="0"
      >
        <strong
          key="0"
        >
          Github project
        </strong>
      </a>
    </li>
    <li
      key="1"
    >
      <a
        href="https://labs.coremedia.com/wiki"
        key="0"
      >
        <strong
          key="0"
        >
          Technical wiki
        </strong>
      </a>
    </li>
  </ul>
</Wrapper>
`;

exports[`Richtext Component should render HTML parsed to React Components 2`] = `
<Wrapper
  theme={
    Object {
      "typography": Object {
        "body1": Object {
          "color": "#000",
          "fontFamily": "Helvetica, Arial, sans-serif",
          "fontSize": "1rem",
          "fontWeight": 400,
          "lineHeight": "1.31em",
        },
      },
    }
  }
>
  <Title1
    key="0"
    theme={
      Object {
        "typography": Object {
          "title1": Object {
            "color": "#000",
            "fontFamily": "Helvetica, Arial, sans-serif",
            "fontSize": "6rem",
            "fontWeight": 300,
            "lineHeight": "1.6em",
            "textTransform": "uppercase",
          },
        },
      }
    }
  >
    Heading 1
  </Title1>
  <Title2
    key="1"
    theme={
      Object {
        "typography": Object {
          "title2": Object {
            "color": "#000",
            "fontFamily": "Helvetica, Arial, sans-serif",
            "fontSize": "5rem",
            "fontWeight": 300,
            "lineHeight": "1.5em",
            "textTransform": "uppercase",
          },
        },
      }
    }
  >
    Heading 2
  </Title2>
  <Title3
    key="2"
    theme={
      Object {
        "typography": Object {
          "title3": Object {
            "color": "#000",
            "fontFamily": "Helvetica, Arial, sans-serif",
            "fontSize": "4rem",
            "fontWeight": 300,
            "lineHeight": "1.4em",
            "textTransform": "uppercase",
          },
        },
      }
    }
  >
    Heading 3
  </Title3>
  <Title4
    key="3"
    theme={
      Object {
        "typography": Object {
          "title4": Object {
            "color": "#000",
            "fontFamily": "Helvetica, Arial, sans-serif",
            "fontSize": "3rem",
            "fontWeight": 300,
            "lineHeight": "1.3em",
            "textTransform": "uppercase",
          },
        },
      }
    }
  >
    Heading 4
  </Title4>
  <Title5
    key="4"
    theme={
      Object {
        "typography": Object {
          "title5": Object {
            "color": "#000",
            "fontFamily": "Helvetica, Arial, sans-serif",
            "fontSize": "2rem",
            "fontWeight": 300,
            "lineHeight": "1.2em",
            "textTransform": "uppercase",
          },
        },
      }
    }
  >
    Heading 5
  </Title5>
  <Title6
    key="5"
    theme={
      Object {
        "typography": Object {
          "title6": Object {
            "color": "#000",
            "fontFamily": "Helvetica, Arial, sans-serif",
            "fontSize": "1rem",
            "fontWeight": 300,
            "lineHeight": "1.1em",
            "textTransform": "uppercase",
          },
        },
      }
    }
  >
    Heading 6
  </Title6>
  <P
    key="6"
    theme={
      Object {
        "typography": Object {
          "body1": Object {
            "color": "#000",
            "fontFamily": "Helvetica, Arial, sans-serif",
            "fontSize": "1rem",
            "fontWeight": 400,
            "lineHeight": "1.31em",
          },
        },
      }
    }
  >
    Paragraph
  </P>
  <PictureWrapper
    key="7"
    theme={
      Object {
        "breakpoints": Object {
          "min": [Function],
        },
      }
    }
  >
    <PictureBrick
      alt="Scrum"
      link="http://127.0.0.1:8080/media/2662/data"
      ratio="landscape_ratio16x9"
      stretch={true}
    />
  </PictureWrapper>
  <a
    href="#none"
    key="8"
  >
    CoreMedia Labs
  </a>
  <ul
    key="9"
  >
    <li
      key="0"
    >
      <a
        href="https://labs.coremedia.com/"
        key="0"
      >
        <strong
          key="0"
        >
          Github project
        </strong>
      </a>
    </li>
    <li
      key="1"
    >
      <a
        href="https://labs.coremedia.com/wiki"
        key="0"
      >
        <strong
          key="0"
        >
          Technical wiki
        </strong>
      </a>
    </li>
  </ul>
</Wrapper>
`;
